--- a/chamber/join.html
+++ b/chamber/join.html
@@ -28,7 +28,7 @@
                 <li><a href="discover.html">DISCOVER</a></li>
                 <li><a href="directory.html">DIRECTORY</a></li>
                 <li><a href="join.html">JOIN</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
 
@@ -58,7 +58,7 @@
             <p class="form-title">--Start your application--</p>
         </div>
 
-        <form action="thankyou.html">
+        <form class="join-form" action="thankyou.html">
             <div class="form-section1">
                 <div>
                     <label>*First Name:
