--- a/chamber/messagesent.html
+++ b/chamber/messagesent.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 230: Discovery Page</title>
-    <meta name="description" content="WDD 230: Chamber of Commerce Assignment Discovery Page.">
+    <title>WDD 230: Message Recieved page</title>
+    <meta name="description" content="WDD 230: Chamber of Commerce Message Recieved page.">
     <link href="css/small.css" rel="stylesheet">
     <link href="css/medium.css" rel="stylesheet">
     <link href="css/large.css" rel="stylesheet">
@@ -40,39 +40,12 @@
     </header>
 
     <span id="greetbanner" role="banner"></span>
-    
     <div class="headerDate"></div>
 
-    <div class="timeVisited">
-    <p><span class="visits-label">Times you've vistited our Chamber:  </span></p><span class="visits"></span>
-    </div>
-
-    <main class="discoverMain">
-        <div>
-            <img class="pro-img" src="images/placeholder_700x400.png" data-src="images/RaceEthnicity_700x400.png" alt="chart1">
-            <p class="imageDesc">Race/Ethnicity chart for West Valley City</p>
+        <div class="thankYou">
+            <h2>--THANK YOU FOR YOUR MESSAGE--</h2>
+            <p>We will review your message and respond as soon as we can!</p>
         </div>
-
-        <div>
-            <img class="pro-img" src="images/placeholder_500x400.png" data-src="images/Maverickcenter_500x400.jpg" alt="image1">
-            <p class="imageDesc">West Valley City Maverick Center</p>
-        </div>
-
-        <div>
-            <img class="pro-img" src="images/placeholder_500x400.png" data-src="images/Skatepark_500x400.jpg" alt="image2">
-            <p class="imageDesc">West Valley City Skatepark</p>
-        </div>
-
-        <div>
-            <img class="pro-img" src="images/placeholder_500x400.png" data-src="images/Valleyfair_500x400.jpg" alt="image3">
-            <p class="imageDesc">West Valley City Valley Fair Mall</p>
-        </div>
-
-        <div>
-            <img class="pro-img" src="images/placeholder_700x400.png" data-src="images/occupations_700x340.png" alt="chart2">
-            <p class="imageDesc">Occupations/Businesses in West Valley City</p>
-        </div>
-    </main>
 
     <footer>
         <div class="footerHeading">
@@ -86,7 +59,6 @@
     </footer>
     <script src="js/date.js"></script>
     <script src="js/banner.js"></script>
-    <script src="js/lazyload.js"></script>
-    <script src="js/timevisited.js"></script>
+
 </body>
 </html>
