--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 230: Lesson 3</title>
-    <meta name="description" content="WDD 230: Lesson 3 Assignment which has us make a site plan for a chamber of commerce website.">
+    <title>WDD 230: Thank you page</title>
+    <meta name="description" content="WDD 230: Chamber of Commerce Thank You page.">
     <link href="css/small.css" rel="stylesheet">
     <link href="css/medium.css" rel="stylesheet">
     <link href="css/large.css" rel="stylesheet">
@@ -28,7 +28,7 @@
                 <li><a href="discover.html">DISCOVER</a></li>
                 <li><a href="directory.html">DIRECTORY</a></li>
                 <li><a href="join.html">JOIN</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
 
