--- a/chamber/join.html
+++ b/chamber/join.html
@@ -113,49 +113,53 @@
                     <label class="membership1">NP Membership -- No cost
                         <input type="radio" name="membLvl-1" value="NP Membership">
                     </label>
-                    <p><b>Benefits:</b>
+                    <div>
+                        <b>Benefits:</b>
                         <ul>
                         <li>General Trainings</li>
                         <li>No discounts</li>
                         <li>No advertising</li>
                         <li>Invited to Chamber meetings/gatherings</li>
                         </ul>
-                    </p>
+                    </div>
                 </div>
 
                 <div class="membership-box">
                     <label class="membership2">Bronze Membership -- $50/monthly
                         <input type="radio" name="membLvl-2" value="Bronze Membership">
                     </label>
-                    <p><b>Benefits:</b>
+                    <div>
+                        <b>Benefits:</b>
                         <ul>
                         <li>General Trainings</li>
                         <li>8% discounts at select stores</li>
                         <li>Small advertising plot</li>
                         <li>Invited to Chamber meetings/gatherings</li>
                         </ul>
-                    </p>
+                    </div>
                 </div>
 
                 <div class="membership-box">
                     <label class="membership3">Silver Membership -- $150/monthly
                         <input type="radio" name="membLvl-3" value="Silver Membership">
                     </label>
-                    <p><b>Benefits:</b>
+                    <div>
+                        <b>Benefits:</b>
                         <ul>
                         <li>Specialized Trainings</li>
                         <li>10% discounts at select stores</li>
                         <li>Medium & small advertising plots</li>
                         <li>Invited to Chamber meetings/gatherings</li>
                         </ul>
-                    </p>
+                    </div>
                 </div>
 
                 <div class="membership-box">
                     <label class="membership4">Gold Membership -- $250/monthly
                         <input type="radio" name="membLvl-4" value="Gold Membership">
                     </label>
-                    <p><b>Benefits:</b>
+                    <div>
+                        <b>Benefits:</b>
                         <ul>
                         <li>Specialized Trainings</li>
                         <li>15% discounts at select stores</li>
@@ -163,7 +167,7 @@
                         <li>Invited to Chamber meetings/gatherings</li>
                         <li>Sent out free Chamber merchandise every month for the first year</li>
                         </ul>
-                    </p>
+                    </div>
                 </div>
                 </div>
 
