--- a/chamber/index.html
+++ b/chamber/index.html
@@ -73,7 +73,7 @@
             <section class="weatherTitle">Weather</section>
             <div>
             <picture>
-                <img class= "wvcweather" src="" alt="">
+                <img class= "wvcweather" src="#" alt="weathericon">
             </picture>
             <div class="temp"></div>
             </div>
