--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -67,6 +67,7 @@
     <script src="js/date.js"></script>
     <script src="js/banner.js"></script>
     <script src="js/cards.js"></script>
+    <script src="js/lazyload.js"></script>
 
 </body>
 </html>
