--- a/chamber/index.html
+++ b/chamber/index.html
@@ -153,5 +153,6 @@
     <script src="js/date.js"></script>
     <script src="js/banner.js"></script> 
     <script src="js/weather.js"></script>
+    <script src="js/lazyload.js"></script>
 </body>
 </html>
