--- a/chamber/index.html
+++ b/chamber/index.html
@@ -99,45 +99,8 @@
                 </section>
         </div>
 
-        <div class="spotlightbox">
-            <div class="spotlight1">
-                <section class="spot1Des">
-                    Join us over at the Recreation Center!
-                </section>
-                <picture >
-                    <img class="recpic" src="images/rec_center_pic.png" alt="recCenter">
-                </picture>
-            </div>
+        <div class="spotlightbox"></div>
 
-             <div class="spotlight2">
-                <section class="spot2Des">
-                    WEB DEVELOPMENT CLASSES!
-                </section>
-                <picture >
-                    <img class="webdev" src="images/computer_icon.png" alt="computericon">
-                </picture>
-                <section class="contactinfo">
-                    webdev@nightclass.com<br>
-                    (999)-999-9999
-                </section>
-                
-            </div>
-
-            <div class="spotlight3">
-                <section class="spot3Des">
-                    WOOD SHOP WORKSHOP!
-                </section>
-                <picture >
-                    <img class="woodshop" src="images/woodshop.png" alt="woodshopicon">
-                </picture>
-                <section class="contactinfo">
-                    chopwood@woodshop.com<br>
-                    (999)-999-9999
-                </section>
-                
-            </div>
-        </div>
-        </div>
     </main>
 
     <footer>
@@ -154,5 +117,6 @@
     <script src="js/banner.js"></script> 
     <script src="js/weather.js"></script>
     <script src="js/lazyload.js"></script>
+    <script src="js/spotlights.js"></script>
 </body>
 </html>
