--- a/finalproject/temple.html
+++ b/finalproject/temple.html
@@ -52,5 +52,8 @@
         </div>
     </footer>
 
+    <script src="js/hamburger.js"></script>
+    <script src="js/cards.js"></script>
+
 </body>
 </html>
