--- a/finalproject/services.html
+++ b/finalproject/services.html
@@ -6,6 +6,7 @@
     <title>WDD 230: Final Project Services Page</title>
     <meta name="description" content="WDD 230: Final Project services page.">
     <link href="css/small.css" rel="stylesheet">
+    <link href="css/medium.css" rel="stylesheet">
     <link href="css/large.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +18,6 @@
     <header>
         <div><img class="mylogo" src="images/Screenshot (16).png" alt="Website logo"></div>
 
-        <!--<div class="title"><h1></h1></div>-->
 
         <nav>
             <ul class="navigation">
@@ -30,8 +30,9 @@
         </nav>
 
         <section class="social">
-            <div><img></div>
-            <div><img></div>
+            <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook icon"></a>
+            <a href="https://www.instagram.com/"><img src="images/insta.png" alt="Instagram icon"></a>
+            <a href="https://twitter.com/"><img src="images/twitter.png" alt="Twitter icon"></a>
         </section>
 
     </header>
