--- a/finalproject/reservation.html
+++ b/finalproject/reservation.html
@@ -6,6 +6,7 @@
     <title>WDD 230: Final Project Reservation Page</title>
     <meta name="description" content="WDD 230: Final Project reservations page.">
     <link href="css/small.css" rel="stylesheet">
+    <link href="css/medium.css" rel="stylesheet">
     <link href="css/large.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +18,6 @@
     <header>
         <div><img class="mylogo" src="images/Screenshot (16).png" alt="Website logo"></div>
 
-        <!--<div class="title"><h1></h1></div>-->
 
         <nav>
             <ul class="navigation">
@@ -30,8 +30,9 @@
         </nav>
 
         <section class="social">
-            <div><img></div>
-            <div><img></div>
+            <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook icon"></a>
+            <a href="https://www.instagram.com/"><img src="images/insta.png" alt="Instagram icon"></a>
+            <a href="https://twitter.com/"><img src="images/twitter.png" alt="Twitter icon"></a>
         </section>
 
     </header>
@@ -61,8 +62,7 @@
                 <div>
                     <label>Date of arrival:</label><span style="color: red !important; display: inline; float: none;">*</span>
                         <input type="date" id="date" name="trip-start" required
-                        value="2022-01-01"
-                        min="2022-01-01" max="2022-12-31">
+                        value="yyyy-dd-mm">
                 </div>
 
                 <div>
@@ -94,7 +94,7 @@
 
                 <div>
                     <label for="country">Home Country:</label><span style="color: red !important; display: inline; float: none;">*</span>
-                        <select id="country" name="country">
+                        <select name="country" id="country" style="color: gray;">
                             <option value="" disabled selected hidden>Select Home Country...</option>
                             <option value="Afghanistan">Afghanistan</option>
                             <option value="Åland Islands">Åland Islands</option>
