--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -53,19 +53,19 @@
             <div class="slideshow-container">
 
                 <div class="mySlides fade">
-                  <img src="images/jordanriver.jpeg">
+                  <img src="images/jordanriver-big.jpeg">
                   <div class="text">Jordan River Utah Temple</div>
                   <div class="summary"></div>
                 </div>
                 
                 <div class="mySlides fade">
-                  <img src="images/mesa.jpg">
+                  <img src="images/mesa-big.jpg">
                   <div class="text">Mesa Arizona Temple</div>
                   <div class="summary"></div>
                 </div>
                 
                 <div class="mySlides fade">
-                  <img src="images/sandiego.jpeg">
+                  <img src="images/sandiego-big.jpeg">
                   <div class="text">San Diego California Temple</div>
                   <div class="summary"></div>
                 </div>
