--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -69,6 +69,13 @@
                   <div class="text">San Diego California Temple</div>
                   <div class="summary"></div>
                 </div>
+
+                <div class="mySlides fade">
+                    <img src="images/anchorage-big.jpeg">
+                    <div class="text">Anchorage Alaska Temple</div>
+                    <div class="summary"></div>
+                  </div>
+
                 
                 <a class="prev" onclick="plusSlides(-1)">❮</a>
                 <a class="next" onclick="plusSlides(1)">❯</a>
@@ -80,7 +87,11 @@
                   <span class="dot" onclick="currentSlide(1)"></span> 
                   <span class="dot" onclick="currentSlide(2)"></span> 
                   <span class="dot" onclick="currentSlide(3)"></span> 
+                  <span class="dot" onclick="currentSlide(4)"></span> 
                 </div>
+
+
+                
 
             <div class="weather-title">--Bethesda, Washington--</div>
             <div class="weather-strip">
@@ -111,7 +122,7 @@
             <a class="box2" href="services.html">
                 <img src="images/services.jpg" alt="box-image-2">
                 <h2>Services</h2>
-                <div>We only give the best of services-find out what we offer!</div>
+                <div>We only offer the best service-find out what we can do!</div>
             </a>
             <a class="box3" href="#">
                 <img src="images/question.png" alt="box-image-3">
