--- a/finalproject/services.html
+++ b/finalproject/services.html
@@ -18,7 +18,7 @@
     <header>
         <div><img class="mylogo" src="images/Screenshot (16).png" alt="Website logo"></div>
 
-
+        
         <nav>
             <ul class="navigation">
                 <li><a class="hamburger" href="#" onclick="">&#9776;</a></li>
@@ -38,6 +38,45 @@
     </header>
 
     <main>
+
+        <div class="services">
+            <h2>Services-</h2>
+            
+            <ul>
+                <li>Free access to changing rooms and bathroom facilities for temple patrons who have traveled far and need to change to and from church clothes</li>
+                    <li>A playroom and low-cost, short-term babysitting services for the children of patrons</li>
+                    <li>Long-term stay accommodations in kitchenette suites for full-time temple missionaries</li>
+                    <li>Temple history themed reception and sitting area</li>
+                    <li>A wedding reception hall that can be easily customized with a simple catering menu and kitchen access for food preparation and serving</li>
+                    <li>A family search center that supports family search and ordinance work</li>
+            </ul>        
+        </div>
+
+        <div class="amenities">
+            <h2>Amenities-</h2>
+            <ul>
+
+                <li>Breakfast</li>
+                <li>Exercise/workout room</li>
+                <li>Indoor pool</li>
+                <li>WiFi high-speed internet access and smart TVs</li>
+                <li>Parking</li>
+                <li>Temple shuttle</li>
+                <li>Family history consultation and family ordinance card service</li>
+
+            </ul>
+        </div>
+
+        <section class="link-bar">
+            <div href="reception.html">Receptions</div>
+
+            <div href="templemissionary.html">Full-time Missionary</div>
+
+        </section>
+
+
+
+
 
     </main>
 
