--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <div><img class="mylogo" src="images/Screenshot (16).png" alt="Website logo"></div>
+        <div><img class="mylogo" src="images/mylogo.png" alt="Website logo"></div>
 
 
 
@@ -53,25 +53,25 @@
             <div class="slideshow-container">
 
                 <div class="mySlides fade">
-                  <img src="images/jordanriver-big.jpeg">
+                  <img src="images/jordanriver-big.jpeg" alt="Jordan River Utah Temple picture">
                   <div class="text">Jordan River Utah Temple</div>
                   <div class="summary"></div>
                 </div>
                 
                 <div class="mySlides fade">
-                  <img src="images/mesa-big.jpg">
+                  <img src="images/mesa-big.jpg" alt="Mesa Arizona Temple picture">
                   <div class="text">Mesa Arizona Temple</div>
                   <div class="summary"></div>
                 </div>
                 
                 <div class="mySlides fade">
-                  <img src="images/sandiego-big.jpeg">
+                  <img src="images/sandiego-big.jpeg" alt="San Diego California Temple picture">
                   <div class="text">San Diego California Temple</div>
                   <div class="summary"></div>
                 </div>
 
                 <div class="mySlides fade">
-                    <img src="images/anchorage-big.jpeg">
+                    <img src="images/anchorage-big.jpeg" alt="Anchorage Alaska Temple picture">
                     <div class="text">Anchorage Alaska Temple</div>
                     <div class="summary"></div>
                   </div>
