--- a/finalproject/services.html
+++ b/finalproject/services.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <div><img class="mylogo" src="images/Screenshot (16).png" alt="Website logo"></div>
+        <div><img class="mylogo" src="images/mylogo.png" alt="Website logo"></div>
 
         
         <nav>
@@ -68,9 +68,9 @@
         </div>
 
         <section class="link-bar">
-            <div href="reception.html">Receptions</div>
+            <a href="reception.html">Receptions</a>
 
-            <div href="templemissionary.html">Full-time Missionary</div>
+            <a href="templemissionary.html">Full-time Missionary</a>
 
         </section>
 
