--- a/finalproject/thankyou.html
+++ b/finalproject/thankyou.html
@@ -16,7 +16,7 @@
 
 </head>
 <header>
-    <div><img class="mylogo" src="images/Screenshot (16).png" alt="Website logo"></div>
+    <div><img class="mylogo" src="images/mylogo.png" alt="Website logo"></div>
 
 
 
