--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -31,11 +31,11 @@
             </ul>
         </nav>
 
-        <section class="social">
+        <div class="social">
             <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook icon"></a>
             <a href="https://www.instagram.com/"><img src="images/insta.png" alt="Instagram icon"></a>
             <a href="https://twitter.com/"><img src="images/twitter.png" alt="Twitter icon"></a>
-        </section>
+        </div>
     </header>
 
     <main>
@@ -96,24 +96,24 @@
             <div class="weather-title">--Bethesda, Washington--</div>
             <div class="weather-strip">
                 
-                <section class="weather-desc-box">  
+                <div class="weather-desc-box">  
                         <img class= "weathericon" src="#" alt="weathericon">
                     <div class="weathertype"></div>
-                </section>
+                </div>
 
                 <div class="temp"></div>
 
-                <section>
+                <div>
                     <div class="windspeed"></div>
                     <div class="humidity"></div>
                     <div class=""></div>
-                </section>
+                </div>
             </div>
             <span class="weather-alert"></span>
 
         </div>
 
-        <section class="tri-container">
+        <div class="tri-container">
             <a class="box1" href="services.html">
                 <img src="images/amenities.jpg" alt="box-image-1">
                 <h2>Amenities</h2>
@@ -130,7 +130,7 @@
                 <div>Here are some frequently asked questions...</div>
             </a>
 
-        </section>
+        </div>
     </main>
 
     <footer>
