--- a/finalproject/reservation.html
+++ b/finalproject/reservation.html
@@ -29,11 +29,11 @@
             </ul>
         </nav>
 
-        <section class="social">
+        <div class="social">
             <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook icon"></a>
             <a href="https://www.instagram.com/"><img src="images/insta.png" alt="Instagram icon"></a>
             <a href="https://twitter.com/"><img src="images/twitter.png" alt="Twitter icon"></a>
-        </section>
+        </div>
 
     </header>
 
