--- a/finalproject/reservation.html
+++ b/finalproject/reservation.html
@@ -40,7 +40,6 @@
     <main>
 
         <div class="reservation-banner">
-            <img>
         </div>
 
         <h1 class="reservation-title">MAKE A RESERVATION</h1>
@@ -61,8 +60,7 @@
 
                 <div>
                     <label>Date of arrival:</label><span style="color: red !important; display: inline; float: none;">*</span>
-                        <input type="date" id="date" name="trip-start" required
-                        value="yyyy-dd-mm">
+                        <input type="date" id="date" name="trip-start" required>
                 </div>
 
                 <div>
