--- a/finalproject/reservation.html
+++ b/finalproject/reservation.html
@@ -38,10 +38,6 @@
     </header>
 
     <main>
-
-        <div class="reservation-banner">
-        </div>
-
         <h1 class="reservation-title">MAKE A RESERVATION</h1>
 
         <form class="reservation-form" action="thankyou.html">
@@ -341,16 +337,16 @@
                         </select>
                 </div>
                 
-            
                 <div class="stayDesc-box">
                     <label class="stayDescTitle">Accommodations/comments (optional):</label>
-                        <textarea id="stayDesc" name="stayDesc" rows="8" cols="40"></textarea>
+                    <textarea id="stayDesc" name="stayDesc" rows="8" cols="40"></textarea>
                 </div>
 
                 <div class="submitbttn">
                     <input type="submit" id="submit" name="submitbttn" value="Submit">
                 </div>
             </div>
+        </form>
     </main>
 
     <footer>
