--- a/finalproject/thankyou.html
+++ b/finalproject/thankyou.html
@@ -48,16 +48,27 @@
 </main>
 
 <footer>
-    <iframe class="googlemaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12405.620132256792!2d-77.10426510906892!3d38.98325147451919!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c97b6b8f21f1%3A0x9a0b3cde14da0a60!2s4800%20Montgomery%20Ln%20%23300%2C%20Bethesda%2C%20MD%2020814!5e0!3m2!1sen!2sus!4v1657822828732!5m2!1sen!2sus" width="250" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="footer-section1">
+        <iframe class="googlemaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12405.620132256792!2d-77.10426510906892!3d38.98325147451919!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c97b6b8f21f1%3A0x9a0b3cde14da0a60!2s4800%20Montgomery%20Ln%20%23300%2C%20Bethesda%2C%20MD%2020814!5e0!3m2!1sen!2sus!4v1657822828732!5m2!1sen!2sus" width="250" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-    <div>
-        <div>Need more info?</div>
-        <div>1-800-TEMPLES</div>
-        <div>Call us!</div>
+        <div>
+            <div>Need more info?</div>
+            <div>1-800-TEMPLES</div>
+            <div>Call us!</div>
+        </div>
     </div>
+
+    
+        <div class="footer-section2">
+            Last Modified: <span id="currentdate"></span>
+            <div>&copy;2022 Final Project, inc. All rights reserved.</div>
+        </div>
+    
+
 </footer>
 
 <script src="js/hamburger.js"></script>
+<script src="js/lastmodified.js"></script>
 
 </body>
 </html>
