--- a/finalproject/templemissionary.html
+++ b/finalproject/templemissionary.html
@@ -54,31 +54,35 @@
             </div>
         </div>
 
-        <div class="suite1">
-            <h2>Single Bed Suite</h2>
-            <img src="images/">
-            <div class="suite-desc">
-                These charming suites provide everything you need to have a fantasic stay, including a walk in closet, personal safe, and a beautiful,
-                spacious bathroom.
+
+        <div class="suites-box">
+            <div class="suite1">
+                <h2 class="suite-title1">Single Bed Suite</h2>
+                <img class="suite-img1" src="images/single-bed.webp" alt="suite 1 bedroom">
+                <div class="suite-desc">
+                    These charming suites provide everything you need to have a fantasic stay, including a walk in closet, personal safe, and a beautiful,
+                    spacious bathroom.
+                </div>
+            </div>
+
+            <div class="suite2">
+                <h2 class="suite-title2">Single Queen Bed Suite</h2>
+                <img class="suite-img2" src="images/double-combined.webp" alt="suite 2 bedroom">
+                <div class="suite-desc">
+                    A fantasic suite with a single queen sized bed if you're looking for something bigger than our regular sized bed.
+                    This room comes with all accomidations but with more space and our personal favorite for couples!
+                </div>
+            </div>
+
+            <div class="suite3">
+                <h2 class="suite-title3">Two Queen Beds Suite</h2>
+                <img class="suite-img3" src="images/seperate-singles.webp" alt="suite 3 bedroom">
+                <div class="suite-desc">
+                    This suite features two seperate queen sized beds, great for families or groups. With all accomidations included, 
+                    what makes this suite special is the additional hottub and an increased kitchen size with a marble island finish.
+                </div>
             </div>
         </div>
-
-        <div class="suite2">
-            <h2>Single Queen Bed Suite</h2>
-            <div class="suite-desc">
-                A fantasic suite with a single queen sized bed if you're looking for something bigger than our regular sized bed.
-                This room comes with all accomidations but with more space and really great for couples!
-            </div>
-        </div>
-
-        <div class="suite3">
-            <h2>Two Queen Beds Suite</h2>
-            <div class="suite-desc">
-                This suite features two seperate queen sized beds, great for families or groups. With all accomidations included, 
-                what makes this suite special is the additional hottub and an increased kitchen size with a marble island/finishes.
-            </div>
-        </div>
-
         <div class="suites-form-full">
             <form class="suites-form">
                 <div class="suites-form-title">
@@ -91,7 +95,7 @@
                 <label for="email-suites">Email:</label>
                     <input text="text" id="email-suites" name="email-suites">
 
-                <label for="contact-suites">General Questions/Inquieries:</label>
+                <label for="contact-suites">General Questions/Inquiries:</label>
                     <textarea name="contact-suites" id="contact-suites" rows="5" cols="20"></textarea>
             </form>
         </div>
