--- a/finalproject/thankyou.html
+++ b/finalproject/thankyou.html
@@ -30,20 +30,21 @@
         </ul>
     </nav>
 
-    <section class="social">
+    <div class="social">
         <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook icon"></a>
         <a href="https://www.instagram.com/"><img src="images/insta.png" alt="Instagram icon"></a>
         <a href="https://twitter.com/"><img src="images/twitter.png" alt="Twitter icon"></a>
-    </section>
+    </div>
 </header>
 <main>
 
-    <section class="background-img">
-        <section class="thankyou-comment">
-            <h1>RESERVATION CONFRIMED</h1>
-            <div>Thank you for reserving your stay, we look forward to serving you!</div>
-        </section>
-    </section>
+
+    <div class="thankyou-comment">
+        <h1>RESERVATION CONFRIMED</h1>
+        <div>Your confirmation number is - </div>
+        <div>Thank you for reserving your stay, we look forward to serving you!</div>
+    </div>
+    
 
 </main>
 
