--- a/finalproject/services.html
+++ b/finalproject/services.html
@@ -39,38 +39,45 @@
 
     <main>
 
-        <div class="services">
-            <h2>Services-</h2>
-            
-            <ul>
-                <li>Free access to changing rooms and bathroom facilities for temple patrons who have traveled far and need to change to and from church clothes</li>
-                    <li>A playroom and low-cost, short-term babysitting services for the children of patrons</li>
-                    <li>Long-term stay accommodations in kitchenette suites for full-time temple missionaries</li>
-                    <li>Temple history themed reception and sitting area</li>
-                    <li>A wedding reception hall that can be easily customized with a simple catering menu and kitchen access for food preparation and serving</li>
-                    <li>A family search center that supports family search and ordinance work</li>
-            </ul>        
+        <div class="services-box">
+            <div class="services">
+                <div class="services-img-box"><img class="services-img" src="images/waiter.webp" alt="waiter image"></div>
+                <h2 class="services-title">Services-</h2>
+                
+                <ul>
+                    <li>Free access to changing rooms and bathroom facilities for temple patrons who have traveled far and need to change to and from church clothes</li>
+                        <li>A playroom and low-cost, short-term babysitting services for the children of patrons</li>
+                        <li>Long-term stay accommodations in kitchenette suites for full-time temple missionaries</li>
+                        <li>Temple history themed reception and sitting area</li>
+                        <li>A wedding reception hall that can be easily customized with a simple catering menu and kitchen access for food preparation and serving</li>
+                        <li>A family search center that supports family search and ordinance work</li>
+                </ul>        
+            </div>
+
+            <div class="amenities">
+                <div class="amenities-img-box"><img class="amenities-img" src="images/pool.webp" alt="pool image"></div>
+                <h2 class="amenities-title">Amenities-</h2>
+                <ul>
+
+                    <li>Breakfast</li>
+                    <li>Exercise/workout room</li>
+                    <li>Indoor pool</li>
+                    <li>WiFi high-speed internet access and smart TVs</li>
+                    <li>Parking</li>
+                    <li>Temple shuttle</li>
+                    <li>Family history consultation and family ordinance card service</li>
+
+                </ul>
+            </div>
         </div>
 
-        <div class="amenities">
-            <h2>Amenities-</h2>
-            <ul>
-
-                <li>Breakfast</li>
-                <li>Exercise/workout room</li>
-                <li>Indoor pool</li>
-                <li>WiFi high-speed internet access and smart TVs</li>
-                <li>Parking</li>
-                <li>Temple shuttle</li>
-                <li>Family history consultation and family ordinance card service</li>
-
-            </ul>
-        </div>
+        <h2 class="link-bar-title">Check out some of our other specialized services like hosting receptions or suites for 
+            full-time temple missionaries on these pages below!</h2>
 
         <section class="link-bar">
-            <a href="reception.html">Receptions</a>
+            <a class="link1" href="reception.html">Receptions</a>
 
-            <a href="templemissionary.html">Full-time Missionary</a>
+            <a class="link2" href="templemissionary.html">Full-time Missionary Suites</a>
 
         </section>
 
