--- a/finalproject/services.html
+++ b/finalproject/services.html
@@ -100,6 +100,7 @@
 
         
             <div class="footer-section2">
+                <div><a href="https://churchofjesuschristtemples.org/">Temple Facts Resource</a></div>
                 Last Modified: <span id="currentdate"></span>
                 <div>&copy;2022 Final Project, inc. All rights reserved.</div>
             </div>
